# NextStep

./: .env.example  .gitignore  Makefile  NextStep.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: neo4j.py  postgresql.py
backend/app/models/: __init__.py  base.py  content.py  learning_progress.py  user.py  user_path.py
backend/app/prompts/: graph_augmentation.txt  job_interpretation.txt  path_explanation.txt  user_assessment.txt
backend/app/routers/: admin.py  auth.py  content.py  paths.py  skills.py
backend/app/schemas/: __init__.py  ai.py  content.py  path.py  progress.py  skill.py  user.py
backend/app/services/: ai_service.py  auth_service.py  graph_service.py  job_interpreter.py  path_generator.py  user_state.py
backend/scripts/: seed_content.py  seed_graph.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/components/auth/: auth-landing.tsx  auth-modal.tsx  auth-provider.tsx
frontend/src/hooks/: use-path-generation.ts
frontend/src/lib/: auth-validation.ts  constants.ts  graph-layout.ts  graph-transform.ts
frontend/src/services/: api-client.ts  auth-api.ts  path-api.ts
frontend/src/stores/: auth-store.ts  path-generation-store.ts
frontend/src/types/: auth.ts  path.ts
(+19 files in other folders)
